refactor: optimize block highlighter, add `/huskclaims logs`